--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/_ViewImports.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 @using PurchaseReq.MVC
 @using PurchaseReq.MVC.Models
+@using PurchaseReq.Models.ViewModels
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
