--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Shared/_LoginPartial.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,22 @@
 ﻿@using Microsoft.AspNetCore.Identity
-
-
+@using Microsoft.AspNetCore.Identity.EntityFrameworkCore;
+@using PurchaseReq.Models.Entities;
 
 @inject SignInManager<Employee> SignInManager
-@inject UserManager<Employee> UserManager
+
+
+@if (SignInManager.IsSignedIn(User))
+{
+    <form asp-area="" asp-controller="Account" asp-action="Logout" id="logoutForm"
+          method="post" class="navbar-right">
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="javascript:document.getElementById('logoutForm').submit()">Log out</a></li>
+        </ul>
+    </form>
+}
+else
+{
+    <ul class="nav navbar-nav navbar-right">
+        <li><a id="loginLink" asp-controller="Account" asp-action="Login">Log in</a></li>
+    </ul>
+}
