--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/_ViewImports.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 @using PurchaseReq.MVC
 @using PurchaseReq.MVC.Models
 @using PurchaseReq.Models.ViewModels
+@using PurchaseReq.MVC.ViewModels
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
