--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Department/Index.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Department/Index.cshtml
@@ -17,7 +17,7 @@
         <tr>
             <td>@department.DepartmentName</td>
             <td>@department.Active</td>
-            <td>@department.Division.DivisionName</td>
+            <td>@department.Division</td>
 
 
 
