--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/_ViewImports.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/_ViewImports.cshtml
@@ -2,6 +2,7 @@
 @using PurchaseReq.MVC.Models
 @using PurchaseReq.Models.ViewModels
 @using PurchaseReq.MVC.ViewModels
+@using PurchaseReq.Models.Entities
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
