--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Campus/Rooms.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Campus/Rooms.cshtml
@@ -1,42 +1,40 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.Identity.EntityFrameworkCore
-@model IList<CampusWithAddress>
-
+@model IList<RoomWithCampus>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Rooms";
 }
 
-<h2>Campus</h2>
-
+<h2>Rooms</h2>
 
 @if (!Model.Any())
 {
-    <tr><td colspan="3" class="text-center">No campuses yet</td></tr>
+    <tr><td colspan="3" class="text-center">No rooms yet</td></tr>
 }
 else
 {
     <table class="table table-condensed table-bordered" header header-content="Campus">
         <tr>
-            <th>Campus Name</th>
+            <th>Room Code</th>
+            <th>Room Name</th>
             <th>Active</th>
-            <th>Street Address</th>
-            <th>City</th>
+            @*<th>City</th>
             <th>State</th>
-            <th>Zip</th>
+            <th>Zip</th>*@
 
         </tr>
 
-        @foreach (CampusWithAddress campus in Model)
+        @foreach (RoomWithCampus campus in Model)
         {
 
             <tr>
-                <td>@campus.CampusName</td>
+                <td>@campus.RoomCode</td>
+                <td>@campus.RoomName</td>
                 <td>@campus.Active</td>
-                <td>@campus.StreetAddress</td>
-                <td>@campus.City</td>
+                @*<td>@campus.City</td>
                 <td>@campus.State</td>
-                <td>@campus.Zip</td>
+                <td>@campus.Zip</td>*@
 
 
 
@@ -60,4 +58,5 @@ else
 <p>
     <a anchor-style="primary" asp-action="AddCampus">Add new campus</a>
 </p>
+
 
