--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Shared/Components/AdminMenu/Default.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Shared/Components/AdminMenu/Default.cshtml
@@ -8,7 +8,7 @@
         @foreach (var menuItem in Model)
         {
             <li>
-                <a asp-controller="Admin" asp-action=@menuItem.ActionValue>@menuItem.DisplayValue</a>
+                <a asp-controller=@menuItem.ControllerValue  asp-action=@menuItem.ActionValue>@menuItem.DisplayValue</a>
             </li>
         }
     </ul>
