--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Division/Departments.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Division/Departments.cshtml
@@ -19,6 +19,7 @@ else
         <tr>
             <th>Department Name</th>
             <th>Active</th>
+            <th>Division Name</th>
 
         </tr>
 
@@ -28,6 +29,7 @@ else
             <tr>
                 <td>@department.DepartmentName</td>
                 <td>@department.Active</td>
+                <td>@department.Division</td>
 
 
 
