--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Campus/AddCampus.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Campus/AddCampus.cshtml
@@ -3,12 +3,12 @@
 
 <h2>Add New Campus</h2>
 
-<form asp-controller="Admin" asp-action="AddCampus" method="post" class="form-horizontal" role="form">
+<form asp-controller="Campus" asp-action="AddCampus" method="post" class="form-horizontal" role="form">
     <hr />
     <div asp-validation-summary="All" class="text-danger"></div>
 
     <div class="form-group">
-        <label asp-for="CampusName" class="col-md-2 control-label"></label>
+        <label asp-for="CampusName" class="col-md-2 control-label">Campus Name</label>
         <div class="col-md-10">
             <input asp-for="CampusName" class="form-control" />
             <span asp-validation-for="CampusName" class="text-danger"></span>
@@ -16,7 +16,7 @@
     </div>
 
     <div class="form-group">
-        <label asp-for="StreetAddress" class="col-md-2 control-label"></label>
+        <label asp-for="StreetAddress" class="col-md-2 control-label">Street Address</label>
         <div class="col-md-10">
             <input asp-for="StreetAddress" class="form-control" />
             <span asp-validation-for="StreetAddress" class="text-danger"></span>
