--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Department/Index.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Department/Index.cshtml
@@ -24,7 +24,7 @@
             <td>
                 <form asp-action="DeleteCampus" asp-route-id="@department.Id" method="post">
                     <a class="btn btn-sm btn-primary" asp-action="EditDivision" asp-route-id="@department.Id">Edit</a>
-                    <a class="btn btn-sm btn-primary" asp-action="Departments" asp-controller="Department" asp-route-Id="@department.Id">View Departments</a>
+                    <a class="btn btn-sm btn-primary" asp-action="Employees" asp-controller="Department" asp-route-Id="@department.Id">View Employees</a>
 
                     <button type="submit" onclick="return confirm('Do you really want to delete this department?');" class="btn btn-sm btn-danger">
                         Delete
