--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Division/Index.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Division/Index.cshtml
@@ -29,7 +29,7 @@ else
             <tr>
                 <td>@division.DivisionName</td>
                 <td>@division.Active</td>
-                <td>@division.Supervisor.FullName</td>
+                <td>@division.SupervisorName</td>
                
 
 
