--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Campus/AddCampus.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Campus/AddCampus.cshtml
@@ -49,7 +49,7 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-primary" value="Create campus" />
+            <input type="submit" class="btn btn-primary" value="Create campus"  asp-controller="Campus" asp-action="AddCampus"/>
         </div>
     </div>
 </form>
