working on signIn

--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Shared/_Layout.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                     @await Component.InvokeAsync("AdminMenu")
                
                 </ul>
-                @*@await Html.PartialAsync("_LoginPartial")*@
+                @await Html.PartialAsync("_LoginPartial")
 
             </div>
         </div>
