--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Shared/_LoginPartial.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Shared/_LoginPartial.cshtml
@@ -10,7 +10,7 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <form asp-area="" asp-controller="Account" asp-action="Logout" id="logoutForm"
+    <form asp-area="" asp-controller="Employee" asp-action="Logout" id="logoutForm"
           method="post" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li><a href="javascript:document.getElementById('logoutForm').submit()">Log out</a></li>
@@ -20,7 +20,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li><a id="loginLink" asp-controller="Account" asp-action="Login">Log in</a></li>
+        <li><a id="loginLink" asp-controller="Employee" asp-action="Login">Log in</a></li>
     </ul>
 }
     
