--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Department/Index.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Department/Index.cshtml
@@ -18,12 +18,13 @@
             <td>@department.DepartmentName</td>
             <td>@department.Active</td>
             <td>@department.DivisonName</td>
+            
 
 
 
             <td>
                 <form asp-action="DeleteCampus" asp-route-id="@department.Id" method="post">
-                    <a class="btn btn-sm btn-primary" asp-action="EditDivision" asp-route-id="@department.Id">Edit</a>
+                    <a class="btn btn-sm btn-primary" asp-action="EditDepartment" asp-route-id="@department.Id">Edit</a>
                     <a class="btn btn-sm btn-primary" asp-action="Employees" asp-controller="Department" asp-route-Id="@department.Id">View Employees</a>
 
                     <button type="submit" onclick="return confirm('Do you really want to delete this department?');" class="btn btn-sm btn-danger">
