--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Employee/Login.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Employee/Login.cshtml
@@ -2,8 +2,9 @@
 @using PurchaseReq.Models.Entities
 @using Microsoft.AspNetCore.Identity
 
-@model LogInViewModel
+@model LoginViewModel
 
+@inject SignInManager<Employee> SignInManager
 
 <h2>Login</h2>
 
