--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Department/EditDepartment.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Department/EditDepartment.cshtml
@@ -1,31 +1,43 @@
 ﻿@model DepartmentWithDivision
 
+
 @{
-    ViewData["Title"] = "Add Department";
+    ViewData["Title"] = "Edit Department";
 }
 
-<h2>Add Department</h2>
-
+<h2>EditDepartment</h2>
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="AddDepartment">
+        <form asp-action="EditDepartment">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        
             <div class="form-group">
-                <label  class="control-label">Department Name</label>
+                <label asp-for="DepartmentName" class="control-label"></label>
                 <input asp-for="DepartmentName" class="form-control" />
                 <span asp-validation-for="DepartmentName" class="text-danger"></span>
             </div>
-          
             <div class="form-group">
-                <label class="control-label">Division</label>
-                
+                <div class="checkbox">
+                    <label>
+                        <input asp-for="Active" /> @Html.DisplayNameFor(model => model.Active)
+                    </label>
+                </div>
+            </div>
+            <div class="form-group">
+                <label asp-for="DivisionId" class="control-label">Division</label>
+
                 @Html.DropDownListFor(x => x.DivisionId, new List<SelectListItem>(ViewBag.Divisions));
-              
+
+
                 <span asp-validation-for="DivisionId" class="text-danger"></span>
             </div>
+
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
+
+            @Html.HiddenFor(x => x.TimeStamp)
+            @Html.HiddenFor(x => x.Id)
         </form>
     </div>
 </div>
