--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Division/EditDivision.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Division/EditDivision.cshtml
@@ -6,4 +6,43 @@
 }
 
 <h2>EditDivision</h2>
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="EditDivision">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <div class="form-group">
+                <label asp-for="DivisionName" class="control-label"></label>
+                <input asp-for="DivisionName" class="form-control" />
+                <span asp-validation-for="DivisionName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <div class="checkbox">
+                    <label>
+                        <input asp-for="Active" /> @Html.DisplayNameFor(model => model.Active)
+                    </label>
+                </div>
+            </div>
+            <div class="form-group">
+                <label asp-for="SupervisorId" class="control-label">Division</label>
+
+                @Html.DropDownListFor(x => x.SupervisorId, new List<SelectListItem>(ViewBag.Supervisors));
+
+
+                <span asp-validation-for="SupervisorId" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-default" />
+            </div>
+
+            @Html.HiddenFor(x => x.TimeStamp)
+            @Html.HiddenFor(x => x.Id)
+        </form>
+    </div>
+</div>
+
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
 
