--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Division/Index.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Division/Index.cshtml
@@ -20,30 +20,32 @@ else
             <th>Division Name</th>
             <th>Active</th>
             <th>Supervisor</th>
+            <th>Supervisor ID</th>
 
         </tr>
 
         @foreach (DivisionWithSupervisor division in Model)
         {
 
-            <tr>
-                <td>@division.DivisionName</td>
-                <td>@division.Active</td>
-                <td>@division.SupervisorName</td>
-               
+        <tr>
+            <td>@division.DivisionName</td>
+            <td>@division.Active</td>
+            <td>@division.SupervisorName</td>
+            <td>@division.SupervisorId</td>
 
 
-                <td>
-                    <form asp-action="DeleteCampus" asp-route-id="@division.Id" method="post">
-                        <a class="btn btn-sm btn-primary" asp-action="EditDivision" asp-route-id="@division.Id">Edit</a>
-                        <a class="btn btn-sm btn-primary" asp-action="Departments" asp-controller="Division" asp-route-Id="@division.Id">View Departments</a>
 
-                        <button type="submit" onclick="return confirm('Do you really want to delete this campus?');" class="btn btn-sm btn-danger">
-                            Delete
-                        </button>
-                    </form>
-                </td>
-            </tr>
+            <td>
+                <form asp-action="DeleteCampus" asp-route-id="@division.Id" method="post">
+                    <a class="btn btn-sm btn-primary" asp-action="EditDivision" asp-route-id="@division.Id">Edit</a>
+                    <a class="btn btn-sm btn-primary" asp-action="Departments" asp-controller="Division" asp-route-Id="@division.Id">View Departments</a>
+
+                    <button type="submit" onclick="return confirm('Do you really want to delete this campus?');" class="btn btn-sm btn-danger">
+                        Delete
+                    </button>
+                </form>
+            </td>
+        </tr>
         }
     </table>
 }
