--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Shared/Components/AdminMenu/Default.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Shared/Components/AdminMenu/Default.cshtml
@@ -3,7 +3,7 @@
 <li class="dropdown">
     <a asp-controller="Admin"
        asp-action="Index"
-       class="dropdown-toggle" data-toggle="dropdown">Admin<b class="caret"></b></a>
+       class="dropdown-toggle" data-toggle="dropdown">Menu<b class="caret"></b></a>
     <ul class="dropdown-menu">
         @foreach (var menuItem in Model)
         {
