--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Admin/AddUser.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Admin/AddUser.cshtml
@@ -20,13 +20,13 @@
 
             <div class="form-group">
                 <label asp-for="Password"></label>
-                <input asp-for="Password" class="form-control" />
+                <input asp-for="Password" class="form-control" type="password" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
 
             <div class="form-group">
                 <label asp-for="ConfirmPassword">Confirm Password</label>
-                <input asp-for="ConfirmPassword" class="form-control" />
+                <input asp-for="ConfirmPassword" class="form-control" type="password" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
 
@@ -63,6 +63,7 @@
 
                 <span asp-validation-for="RoleId" class="text-danger"></span>
             </div>
+
 
             <button type="submit" class="btn btn-primary">Create User</button>
         </form>
