--- a/PurchaseReq.MVC/PurchaseReq.MVC/wwwroot/css/site.css
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/wwwroot/css/site.css
@@ -33,3 +33,18 @@
         display: none;
     }
 }
+
+.table {
+    table-layout: auto;
+    border-collapse: collapse;
+    width: 100%;
+}
+table td {
+    border: 1px solid #ccc;
+}
+table .absorbing-column {
+    width: 100%;
+}
+p{
+    color: red;
+}
