--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Campus/Index.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Campus/Index.cshtml
@@ -4,7 +4,7 @@
 
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Campus";
 }
 
 <h2>Campus</h2>
@@ -37,20 +37,9 @@ else
                 <td>@campus.City</td>
                 <td>@campus.State</td>
                 <td>@campus.Zip</td>
-
-
-
-
-
                 <td>
-                    <form asp-action="DeleteCampus" asp-route-id="@campus.Id" method="post">
-                        <a class="btn btn-sm btn-primary" asp-action="EditCampus" asp-route-id="@campus.Id">Edit</a>
-                        <a class="btn btn-sm btn-primary" asp-action="Rooms" asp-controller="Campus" asp-route-id="@campus.Id">View Rooms</a>
-
-                        <button type="submit" onclick="return confirm('Do you really want to delete this campus?');" class="btn btn-sm btn-danger">
-                            Delete
-                        </button>
-                    </form>
+                    <a class="btn btn-sm btn-primary" asp-action="EditCampus" asp-route-id="@campus.Id">Edit</a>
+                    <a class="btn btn-sm btn-primary" asp-action="Rooms" asp-controller="Campus" asp-route-id="@campus.Id">View Rooms</a>
                 </td>
             </tr>
         }
