--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Request/Index.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Request/Index.cshtml
@@ -3,7 +3,7 @@
 @model IList<RequestWithVendor>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Requests";
 }
 
 <h2>Requests</h2>
