--- a/PurchaseReq.MVC/PurchaseReq.MVC/Views/Order/PastOrders.cshtml
+++ b/PurchaseReq.MVC/PurchaseReq.MVC/Views/Order/PastOrders.cshtml
@@ -5,7 +5,7 @@
 <h2>Orders</h2>
 
 
-@if (true == false)
+@if (!Model.Any())
 {
     <tr><td colspan="3" class="text-center">No Orders yet</td></tr>
 }
